Closed Bug 14755 Opened 25 years ago Closed 25 years ago

RDF/XML datasource doesn't prevent 'duplicate' loads

Categories

(Core Graveyard :: RDF, defect, P3)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: waterson, Assigned: waterson)

References

Details

Attachments

(1 file)

Two cotemporaneous calls to RDF/XML datasource can cause two URL loads to be
issued, and will generally get the datasource's knickers into a knot.
Attached file patch
Status: NEW → ASSIGNED
QA Contact: tever → rjc
Target Milestone: M11
Proposed patch adds state variable "load pending" that guards against two calls
to Refresh() triggering multiple loads. rjc: could you please code review?
This looks fine to me... although, if Refresh() is called with a load already
pending, it looks like the new load request is just ignored and NS_OK is
returned.  Perhaps a non-fatal failure code should be returned instead?
*** Bug 14229 has been marked as a duplicate of this bug. ***
this could affect flash panel, sidebar open/close/customize, local store &
persistence. they need to be tested.
Blocks: 11501
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
ok, fixed. rjc, per your suggestion, a synchronous load will return an error if
an asynchronous load is already pending.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: