Bug 14755. Guard against multiple simlutaneous 'Refresh()' calls issuing several URL loads. r=rjc, a=chofmann